package edu.uees.tutorias.domain;

public enum EstadoReserva {
    SOLICITADA,
    CONFIRMADA,
    CANCELADA,
    FINALIZADA
}
