package edu.uees.tutorias.notificacion;

public interface Notificador {
    void enviar(String destinatario, String mensaje);
}
