@startuml
!pragma layout smetana
skinparam backgroundColor white
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #475569
}
skinparam interface {
  BackgroundColor #DBEAFE
  BorderColor #1D4ED8
}

title Sistema de gestión de tutorías - Incremento 1

package "Dominio" {
  class Reserva {
    - id: String
    - estado: EstadoReserva
    - observadores: List<ObservadorReserva>
    + confirmar(): void
    + cancelar(): void
    + finalizar(): void
    + agregarObservador(o): void
    + eliminarObservador(o): void
  }

  enum EstadoReserva {
    SOLICITADA
    CONFIRMADA
    CANCELADA
    FINALIZADA
  }

  class Estudiante
  class HorarioDisponible {
    - inicio: LocalDateTime
    - fin: LocalDateTime
    - reservado: boolean
    + reservar(): void
    + liberar(): void
  }
}

package "Builder conservado de Ae2" {
  class ReservaBuilder {
    + id(valor): ReservaBuilder
    + estudiante(valor): ReservaBuilder
    + horario(valor): ReservaBuilder
    + tema(valor): ReservaBuilder
    + build(): Reserva
  }
}

package "Strategy de cancelación" {
  interface PoliticaCancelacion {
    + permiteCancelar(reserva, momento): boolean
    + nombre(): String
  }
  class PoliticaCancelacionRegular
  class PoliticaCancelacionPrioritaria
  class ServicioCancelacion {
    - politica: PoliticaCancelacion
    + cancelar(reserva, momento): ResultadoCancelacion
  }
  class ResultadoCancelacion
}

package "Observer de cambios" {
  interface ObservadorReserva {
    + actualizar(reserva, anterior, actual): void
  }
  class CalendarioObserver
  class PanelTutoriasObserver
  class NotificacionReservaObserver
}

package "Factory Method conservado de Ae2" {
  interface Notificador {
    + enviar(destinatario, mensaje): void
  }
  abstract class NotificacionFactory {
    + crearNotificador(): Notificador
    + notificar(destinatario, mensaje): void
  }
  class EmailFactory
  class NotificadorEmail
}

Reserva --> EstadoReserva
Reserva --> Estudiante
Reserva --> HorarioDisponible
ReservaBuilder ..> Reserva : construye

ServicioCancelacion --> PoliticaCancelacion : Strategy
PoliticaCancelacionRegular ..|> PoliticaCancelacion
PoliticaCancelacionPrioritaria ..|> PoliticaCancelacion
ServicioCancelacion ..> Reserva
ServicioCancelacion ..> ResultadoCancelacion

Reserva "1" o-- "0..*" ObservadorReserva : notifica
CalendarioObserver ..|> ObservadorReserva
PanelTutoriasObserver ..|> ObservadorReserva
NotificacionReservaObserver ..|> ObservadorReserva
NotificacionReservaObserver --> NotificacionFactory

EmailFactory --|> NotificacionFactory
NotificacionFactory ..> Notificador : crea
NotificadorEmail ..|> Notificador
EmailFactory ..> NotificadorEmail

@enduml
